workload/apps/homarr/transmission-openvpn/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-openvpn
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: transmission-openvpn
    app.kubernetes.io/name: transmission-openvpn
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
