workload/apps/homarr/transmission-openvpn/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-openvpn
  namespace: default
spec:
  rules:
    - host: transmission.delisle.me
      http:
        paths:
          - backend:
              service:
                name: transmission-openvpn
                port:
                  number: 80
            path: /
            pathType: Prefix
